--- a/Shop.Api/Properties/launchSettings.json
+++ b/Shop.Api/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     "Shop.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
