--- a/Shop.Api/appsettings.Production.json
+++ b/Shop.Api/appsettings.Production.json
@@ -29,7 +29,7 @@
         "Name": "File",
         "Args": {
           "path": "Logs\\log-.txt",
-          "outputTemplate": "{Timestamp:G} {SourceContext}:{Message}{NewLine:1}{Exception:1}",
+          "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}{Exception:1}",
           "rollingInterval": "Day"
         }
       }
